--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -64,10 +64,10 @@
                 </div>
                 <div class="pt-list-item">
                   <span class="pt-tooltip-show-text"
-                    ><span class="pt-tooltip-show">Github triggers</span
+                    ><span class="pt-tooltip-show">GitHub triggers</span
                     ><span class="pt-tooltip pt-tooltip-right-bottom"
                       ><span class="pt-tooltip-content"
-                        >Automatically trigger checks from Github PR or
+                        >Automatically trigger checks from GitHub PR or
                         commits. Works out-of-the-box with Zeit, Heroku
                         etc.</span
                       ></span
@@ -190,7 +190,7 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">Github triggers</div>
+                      <div class="pt-text">GitHub triggers</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
@@ -329,7 +329,7 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">Github triggers</div>
+                      <div class="pt-text">GitHub triggers</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
@@ -465,7 +465,7 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">Github triggers</div>
+                      <div class="pt-text">GitHub triggers</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
@@ -604,7 +604,7 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">Github triggers</div>
+                      <div class="pt-text">GitHub triggers</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
