--- a/site/layouts/partials/docs-menu.html
+++ b/site/layouts/partials/docs-menu.html
@@ -8,7 +8,7 @@
     <ul class="docs-menu-content">
       {{ $currentPage := . }}
       {{ range .Site.Menus.docs }} {{ if .HasChildren }}
-      <li class='docs-menu-item'>
+      <li class='docs-menu-item {{ if $currentPage.HasMenuCurrent "docs" . }}active{{ end }}'>
         <a class='docs-menu-title {{ if $currentPage.HasMenuCurrent "docs" . }}active{{ end }}' href="{{.URL}}">{{.Name}}</a>
 
         {{if $currentPage.HasMenuCurrent "docs" . }}
