feat: WIP: updates for press release

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -10,6 +10,7 @@
         {{ partial "api-monitoring-section" . }}
         {{ partial "site-monitoring-section" . }}
         {{ partial "alerting-section" . }}
+        {{ partial "workflow-section" . }}
         {{ partial "results-section" . }}
         {{ partial "trusted-by-section" . }}
         {{ partial "testimonial-three-col-row" . }}
