--- a/site/layouts/partials/all-features.html
+++ b/site/layouts/partials/all-features.html
@@ -1,1 +1,42 @@
-<section class="all-features-section"><div class="container"><div class="row mb-lg-5 mb-3"><div class="col-sm-12 text-center"><h2 class="section-header">All features at a glance</h2></div></div><div class="row"><div class="col-sm-4"><h5>API monitoring</h5><p>Flexible <a href='/product/api-monitoring/' class="info-link">API monitoring</a> with custom body, headers, query parameters and unlimited assertions.</p></div><div class="col-sm-4"><h5>Site transaction monitoring</h5><p>Scripted browser clicks flow using Chrome Puppeteer Node.js framework. <a href='/docs/browser-checks/screenshots/' class="info-link">Take up to three screenshots</a> per check.</p></div><div class="col-sm-4"><h5>SSL expiry alerting</h5><p>We'll alert you when your SSL certificate is about to expire up to 30 days in advance till D-day.</p></div></div><div class="row"><div class="col-sm-4"><h5>Global coverage</h5><p>Get global latency metrics by running your checks from up to eight (more coming) data center locations around the world.</p></div><div class="col-sm-4"><h5>Alerting channels</h5><p>Generous SMS bundles & unlimited recipients / endpoints for Pagerduty, email, web hook and Slack alerting integrations.</p></div><div class="col-sm-4"><h5>Threshold alerting</h5><p>Control what <a href='/docs/alerting/' class="info-link">triggers alerts</a> and set reminders. We always run double checks to combat false positives.</p></div></div><div class="row"><div class="col-sm-4"><h5>Public dashboards</h5><p>Display a <a href='/docs/dashboards/' class="info-link">public dashboard</a> on your site or in-office mounted TV, hosted on your company domain.</p></div><div class="col-sm-4"><h5>Teams & users</h5><p><a href='/docs/teams/' class="info-link">Add team members to your account to collaborate</a>. Comes with full role based access control.</p></div><div class="col-sm-4"><h5>CI/CD integration</h5><p><a href='/docs/cicd/triggers/' class="info-link">Trigger your checks</a> on GitHub push & PR's or using a simple cURL command from your CI/CD pipeline.</p></div></div></div></section>
+<section class="all-features-section">
+  <div class="container">
+    <div class="row mb-lg-5 mb-3">
+      <div class="col-sm-12 text-center"><h2 class="section-header">All features at a glance</h2></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4"><h5>API monitoring</h5>
+        <p>Flexible <a class="info-link" href='/product/api-monitoring/'>API monitoring</a> with custom body, headers,
+          query parameters and unlimited assertions.</p></div>
+      <div class="col-sm-4"><h5>synthetic monitoring</h5>
+        <p>Scripted browser clicks flow using Chrome Puppeteer Node.js framework. <a
+            class="info-link" href='/docs/browser-checks/screenshots/'>Take up to three screenshots</a> per check.</p>
+      </div>
+      <div class="col-sm-4"><h5>CI/CD integration</h5>
+        <p><a class="info-link" href='/docs/cicd/triggers/'>Trigger your checks</a> on GitHub push & PR's or using a
+          simple cURL command from your CI/CD pipeline.</p></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4"><h5>Public dashboards</h5>
+        <p>Display a <a class="info-link" href='/docs/dashboards/'>public dashboard</a> on your site or in-office
+          mounted TV, hosted on your company domain.</p></div>
+      <div class="col-sm-4"><h5>Global coverage</h5>
+        <p>Get global latency metrics by running your checks from up to eight (more coming) data center locations around
+          the world.</p></div>
+      <div class="col-sm-4"><h5>Alerting channels</h5>
+        <p>Generous SMS bundles & unlimited recipients / endpoints for Pagerduty, email, web hook and Slack alerting
+          integrations.</p></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4"><h5>Threshold alerting</h5>
+        <p>Control what <a class="info-link" href='/docs/alerting/'>triggers alerts</a> and set reminders. We always run
+          double checks to combat false positives.</p></div>
+      <div class="col-sm-4"><h5>Teams & users</h5>
+        <p><a class="info-link" href='/docs/teams/'>Add team members to your account to collaborate</a>. Comes with full
+          role based access control.</p>
+      </div>
+      <div class="col-sm-4"><h5>SSL expiry alerting</h5>
+        <p>We'll alert you when your SSL certificate is about to expire up to 30 days in advance till D-day.</p>
+      </div>
+    </div>
+  </div>
+</section>
