--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -14,7 +14,7 @@
               <a href="/product/api-monitoring/">API monitoring</a>
             </li>
             <li>
-              <a href="/product/transaction-monitoring/">Site transaction monitoring</a>
+              <a href="/product/synthetic-monitoring/">Synthetic monitoring</a>
             </li>
             <li><a href="/pricing">Pricing</a></li>
             <li><a href="/docs">Docs</a></li>
@@ -51,7 +51,7 @@
     </div>
     <div class="row footer-bottom">
       <div class="col-12">
-        <span>Checkly is operated by Pink Robots B.V. from Berlin, DE & Utrecht, NL · Copyright © 2020</span>
+        <span>Checkly is operated by Checkly Inc. from all over the world · Copyright © 2020</span>
         <div class="float-right"><a class="mr-3" href="https://heapanalytics.com/?utm_source=badge" rel="nofollow"><img
             style="width:108px;height:41px" src="//heapanalytics.com/img/badgeLight.png"
             alt="Heap | Mobile and Web Analytics"/></a><a href="https://twitter.com/checklyhq" target="_blank"><img
