--- a/site/layouts/partials/navbar.html
+++ b/site/layouts/partials/navbar.html
@@ -2,16 +2,14 @@
   <div class="container">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"><span></span><span></span><span></span></button>
-    <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.svg" width="120" alt="checkly logo"/></a><a
-      class="callout" href="/jobs">We're hiring!</a>
+    <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.svg" width="120" alt="checkly logo"/></a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown"
                                          id="navbarDropdownMenuLink" href="#">Product</a>
           <div class="dropdown-menu big-drop-shadow product-dropdown"><a class="dropdown-item"
                                                                          href="/product/api-monitoring/">API
-            Monitoring</a><a class="dropdown-item" href="/product/transaction-monitoring/">Site Transaction
-            Monitoring</a><a class="dropdown-item" href="/product/alerting/">Alerting</a></div>
+            Monitoring</a><a class="dropdown-item" href="/product/synthetic-monitoring/">Synthetic Monitoring</a><a class="dropdown-item" href="/product/alerting/">Alerting</a></div>
         </li>
         <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
         <li class="nav-item"><a class="nav-link" href="/docs">Docs</a></li>
