--- a/site/layouts/partials/site-monitoring-section.html
+++ b/site/layouts/partials/site-monitoring-section.html
@@ -1,5 +1,24 @@
-<section class="site-monitoring-section"><div class="container"><div class="row"><div class="col-sm-5"><div class="text-side text-left"><h2 class="section-super-header">site transaction monitoring</h2><h3 class="section-header">No more broken shopping carts</h3><p class="lead-text">Monitor and validate your most crucial site transactions like logins, shopping carts and onboarding
-flows. Take screenshots to get instant insights into what's working and what's not.
-<br><br>
-Scripting browser click flows used to suck. Not anymore. Checkly uses Google's Puppeteer framework to run your
-flows in a Chrome browser.</p><a class="cta-link" href="/product/transaction-monitoring/">Learn more</a></div></div><div class="col-sm-6 offset-sm-1"><div class="image-side right"><img class="big-landing-image big-drop-shadow code fade-in ml-md-5 lazy" src="/landing/browser-code@2x.png" alt="site transaction monitoring"/><img class="big-landing-image big-drop-shadow screenshots fade-in ml-md-5 lazy hidden-md-down" src="/landing/browser-screenshots@2x.png" alt="site transaction monitoring"/></div></div></div></div></section>
+<section class="site-monitoring-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-5">
+        <div class="text-side text-left"><h2 class="section-super-header">synthetic monitoring</h2>
+          <h3 class="section-header">No more broken web apps</h3>
+          <p class="lead-text">Monitor and validate your most crucial site transactions like logins, shopping carts and
+            onboarding
+            flows. Take screenshots to get instant insights into what's working and what's not.
+            <br><br>
+            Scripting browser click flows used to suck. Not anymore. Checkly uses Google's Puppeteer framework to run
+            your
+            flows in a Chrome browser.</p><a class="cta-link" href="/product/transaction-monitoring/">Learn more</a>
+        </div>
+      </div>
+      <div class="col-sm-6 offset-sm-1">
+        <div class="image-side right"><img alt="synthetic monitoring"
+                                           class="big-landing-image big-drop-shadow code fade-in ml-md-5 lazy" src="/landing/browser-code@2x.png"/><img
+            alt="synthetic monitoring"
+            class="big-landing-image big-drop-shadow screenshots fade-in ml-md-5 lazy hidden-md-down" src="/landing/browser-screenshots@2x.png"/></div>
+      </div>
+    </div>
+  </div>
+</section>
