--- a/src/scss/sections/_api-monitoring.scss
+++ b/src/scss/sections/_api-monitoring.scss
@@ -5,6 +5,7 @@
   padding-bottom: $section-bottom-padding;
   height: 616px;
   overflow: hidden;
+  background: $ash;
   img.assertions {
     left: -100px;
     top: 180px;
