--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,6 +27,7 @@
 @import 'sections/hero';
 @import 'sections/api-monitoring';
 @import 'sections/alerting';
+@import 'sections/workflow';
 @import 'sections/results';
 @import 'sections/features';
 @import 'sections/all-features';
