--- a/src/scss/checkly-webapp-src/style/scss/_typography.scss
+++ b/src/scss/checkly-webapp-src/style/scss/_typography.scss
@@ -28,15 +28,15 @@ $headings-font-weight:   400;
 $headings-line-height:   1.1 !default;
 $headings-color:         $gray-dark;
 
-$display1-size: 6rem !default;
-$display2-size: 5.5rem !default;
-$display3-size: 4.5rem !default;
-$display4-size: 3.5rem !default;
+$display1-size: 6rem;
+$display2-size: 5rem;
+$display3-size: 3.5rem;
+$display4-size: 3rem;
 
-$display1-weight:     300 !default;
-$display2-weight:     300 !default;
-$display3-weight:     300 !default;
-$display4-weight:     300 !default;
+$display1-weight:     300;
+$display2-weight:     400;
+$display3-weight:     500;
+$display4-weight:     400;
 $display-line-height: $headings-line-height !default;
 
 $lead-font-size:   1.25rem !default;
