--- a/src/scss/sections/_testimonials.scss
+++ b/src/scss/sections/_testimonials.scss
@@ -12,12 +12,11 @@
     margin-bottom: 1rem;
   }
   .testimonial-text {
-    font-family: Roboto, "fakt-soft", system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     font-size: $font-size-base;
-    color: $gray-darkish;
+    color: $gray-dark;
     line-height: 30px !important;
     font-weight: 300;
-    padding: .5 * $spacer-y 0;
+    padding: 1.5 * $spacer-y 0;
   }
   .testimonial-portrait {
     display: flex;
@@ -92,11 +91,11 @@
   }
 
   &.testimonial-3 {
+    margin-bottom: 6rem;
     .testimonial-text {
-      font-family: Georgia, serif;
       font-weight: 400;
       margin-bottom: 0;
-      font-size: 18px;
+      font-size: $font-size-h4;
       &:before {
         content: "“";
         font-family: serif;
