feat: WIP: about page

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -27,12 +27,12 @@
       <div class="col-sm-3">
         <div class="mb-3 mb-md-0"><h6>Company</h6>
           <ul>
-            <li><a href="https://headwayapp.co/checkly-updates" target="_blank">News</a></li>
-            <li><a href="https://blog.checklyhq.com/" target="_blank">Blog</a></li>
-            <li><a href="/about">About us</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/jobs">Jobs
               <div class="badge badge-accent ml-2">we're hiring!</div>
             </a></li>
+            <li><a href="https://blog.checklyhq.com/" target="_blank">Blog</a></li>
+            <li><a href="https://headwayapp.co/checkly-updates" target="_blank">Product updates</a></li>
             <li><a href="/terms">Terms of Use</a></li>
             <li><a href="/privacy">Privacy policy</a></li>
           </ul>
