feat: replace terraform with GitHub

--- a/site/layouts/partials/workflow-section.html
+++ b/site/layouts/partials/workflow-section.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="row mb-lg-4 text-center justify-content-center mb-5">
       <div class="col-sm-12 col-md-8"><h2 class="section-super-header">workflow</h2>
-        <h3 class="display-4 mb-4">Integrates with your developer workflow</h3>
+        <h3 class="display-4 mb-4">Integrates with your workflow</h3>
       </div>
       <div class="col-sm-12 col-md-8">
-        <p class="lead mb-4">Checkly integrates with the open source tools you use on a daily basis.</p>
+        <p class="lead mb-4">Checkly integrates with the open source & developer tools you use on a daily basis.</p>
       </div>
     </div>
     <div class="row text-center">
@@ -22,16 +22,16 @@
         <a class="cta-link" href="/docs/api-checks/setup-teardown-scripts/">Learn more</a>
       </div>
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+        <img alt="prometheus logo" class="mb-4" src="/landing/github-logo.png"/>
+        <h5>GitHub</h5>
+        <p class="px-xl-4">Run your checks as tests on each <code>git push</code> and get results in your PR comments.</p>
+        <a class="cta-link" href="/docs/cicd/github/">Learn more</a>
+      </div>
+      <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
         <img alt="prometheus logo" class="mb-4" src="/landing/prometheus-logo.png"/>
         <h5>Prometheus</h5>
         <p class="px-xl-4">Export uptime and status data to your Prometheus cluster.</p>
         <a class="cta-link" href="/docs/integrations/prometheus/">Learn more</a>
-      </div>
-      <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-        <img alt="prometheus logo" class="mb-4" src="/landing/terraform-logo.png"/>
-        <h5>Terraform</h5>
-        <p class="px-xl-4">Create and manage your checks as code using Hashicorp's Terraform.</p>
-        <a class="cta-link" href="/docs/integrations/terraform">Learn more</a>
       </div>
     </div>
   </div>
