feat: add picture hannes

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -5,7 +5,7 @@
       <div class="container">
         <div class="row text-left justify-content-center pt-5">
           <div class="col-sm-12 col-lg-8">
-            <img src="/images/racoon_logo.svg" alt="Checkly racoon logo" class="mb-4">
+            <img src="/images/racoon_logo.svg" alt="Checkly racoon logo" class="mb-4" width="50px">
             <h1>About Checkly</h1>
             <p class="mb-4">Checkly was founded in Berlin in 2018 to give the active monitoring and end-to-end-testing space a kick in the butt.
             We believe in a bright future where apps are built and shipped more reliably from dev to production and further.</p>
@@ -44,7 +44,7 @@
                 <p>Product & Engineering</p>
               </div>
               <div class="col-md-6 col-lg-4 align-items-center text-center">
-                <img src="/about/images/tnolet.jpg" alt="portrait Tim Nolet" class="avatar mb-3">
+                <img src="/about/images/hlenke.jpg" alt="portrait Tim Nolet" class="avatar mb-3">
                 <h6 class="font-weight-bold mb-1">Hannes Lenke</h6>
                 <p>General Manager</p>
               </div>
