--- a/site/layouts/partials/hero-section.html
+++ b/site/layouts/partials/hero-section.html
@@ -14,7 +14,7 @@
     </div>
     <div class="row">
       <div class="col-sm-12 text-center">
-        <img class="hero-image img-fluid" src="/images/dashboard-screen@2x.png" alt="checkly monitoring dashboard"/>
+        <img class="hero-image img-fluid" src="/landing/home-dashboard@2x.png" alt="checkly monitoring dashboard"/>
       </div>
     </div>
 </section>
