style: small copy tweaks

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -9,6 +9,7 @@
             <h1>About Checkly</h1>
             <p class="mb-4">Checkly was founded in Berlin in 2018 to give the active monitoring and end-to-end-testing space a kick in the butt.
             We believe in a bright future where apps are built and shipped more reliably from dev to production and further.</p>
+            <p>Our vision is to create the active reliability platform for modern DevOps teams. A platform with world class developer experience!</p>
             <div class="divider pt-5"></div>
           </div>
         </div>
@@ -73,7 +74,7 @@
                   <dt>Guillermo Rauch</dt>
                   <dd>CEO @ Zeit</dd>
                   <dt>Robin Vasan</dt>
-                  <dd>Mango Capital</dd>
+                  <dd>Hashicorp board / Mango Capital</dd>
 
                 </dl>
               </div>
@@ -90,7 +91,7 @@
               <div class="col-md-4">
                 <dl>
                   <dt>Ott Kaukver</dt>
-                  <dd>CTO @ Twilio</dd>
+                  <dd>ex-CTO Twilio</dd>
                   <dt>Mirko Novakovic</dt>
                   <dd>CEO @ Instana</dd>
                   <dt>Charles Ramsey</dt>
@@ -108,7 +109,14 @@
         <div class="row text-left justify-content-center pt-5 mb-5">
           <div class="col-sm-12 col-lg-8">
             <h2>Contact</h2>
-            <p>Checkly is a service run by Pink Robots B.V. with its registered offices at:</p>
+            <p>info@checklyhq.com<br>
+            Checkly has registered offices at</p>
+            <address>
+              🇺🇸 United States
+              Checkly Inc.<br>
+              One Boston Place, Suite 2600<br>
+              Boston, MA 02108<br>
+            </address>
             <address>
               🇳🇱 The Netherlands<br>
               The J.P. Coenstraat 24 BIS<br>
