feat: adds promo banner

--- a/site/layouts/partials/navbar.html
+++ b/site/layouts/partials/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable-md fixed-top">
+<nav class="navbar navbar-toggleable-md">
   <div class="container">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"><span></span><span></span><span></span></button>
