--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   {{ partial "head" . }}
-  <body class="fixed-top-padding">
+  <body>
+  {{ partial "promo-banner" . }}
   {{ partial "navbar" . }}
     <div class="main">
       <div class="landing" id="landing">
