--- a/src/scss/_promo-banner.scss
+++ b/src/scss/_promo-banner.scss
@@ -1,12 +1,20 @@
 .promo-banner {
-  position: fixed;
-  top: 0;
-  padding: .3 * $spacer-y;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  min-height: 48px;
   z-index: 999999;
   width: 100%;
+  padding: .5rem;
 
-  &.black-friday {
-    background-color: $gray-dark;
-    color: $white;
+  .promo-banner-link {
+    display: flex;
+    text-decoration: none;
+  }
+  &.funding {
+    background-color: $blue-light;
+    color: $gray-dark;
   }
 }
