style: style tweaks

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -21,7 +21,7 @@
           <div class="col-sm-12 col-lg-8">
             <h2>How we work</h2>
             <p>We care about delivering an awesome service. We work on Checkly and open source projects like Puppeteer Recorder.
-              We don't take ourselves too serious; we take our work and our customers very serious.
+              We don't take ourselves too serious; we take our work and our customers very seriously.
             </p>
             <p>
               We ❤️open source and aim to donate 1% of our revenue to non-corporate backed open source maintainers.
@@ -70,12 +70,11 @@
               <div class="col-md-4">
                 <dl>
                   <dt>Andrei Brasoveanu</dt>
-                  <dd>Accel partners</dd>
+                  <dd>Accel</dd>
                   <dt>Guillermo Rauch</dt>
                   <dd>CEO @ Zeit</dd>
                   <dt>Robin Vasan</dt>
-                  <dd>Hashicorp board / Mango Capital</dd>
-
+                  <dd>Hashicorp board member</dd>
                 </dl>
               </div>
               <div class="col-md-4">
@@ -112,7 +111,7 @@
             <p>info@checklyhq.com<br>
             Checkly has registered offices at</p>
             <address>
-              🇺🇸 United States
+              🇺🇸 United States<br>
               Checkly Inc.<br>
               One Boston Place, Suite 2600<br>
               Boston, MA 02108<br>
