--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -42,7 +42,7 @@
         <div class="mb-3 mb-md-0"><h6>Connect</h6>
           <ul>
             <li><a class="open-intercom-link" href="mailto:support@checklyhq.com">Support</a></li>
-            <li><a href="https://twitter.com/checklyHQ" target="_blank">Twitter</a></li>
+            <li><a href="https://twitter.com/checklyHQ" target="_blank">Twitter @ChecklyHQ</a></li>
             <li><a href="https://github.com/checkly/product-roadmap/projects/1" target="_blank">Public Roadmap</a></li>
           </ul>
         </div>
@@ -51,7 +51,7 @@
     </div>
     <div class="row footer-bottom">
       <div class="col-12">
-        <span>Checkly is operated by Checkly Inc. from all over the world · Copyright © 2020</span>
+        <span>©2020 Checkly Inc. All Rights Reserved.</span>
         <div class="float-right"><a class="mr-3" href="https://heapanalytics.com/?utm_source=badge" rel="nofollow"><img
             style="width:108px;height:41px" src="//heapanalytics.com/img/badgeLight.png"
             alt="Heap | Mobile and Web Analytics"/></a><a href="https://twitter.com/checklyhq" target="_blank"><img
