--- a/site/layouts/partials/testimonial-quote-full-width-1.html
+++ b/site/layouts/partials/testimonial-quote-full-width-1.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row text-center justify-content-center">
       <div class="col-sm-12 col-lg-10">
-        <div class="mb-lg-3"><p class="testimonial-text">"Checkly is incredible: It combines Pingdom, Ghost
+        <div class="mb-lg-3"><p class="testimonial-text mb-3">"Checkly is incredible: It combines Pingdom, Ghost
           Inspector and Assertible all in the same app, and the insights are much more detailed."</p>
           <div class="testimonial-name-badge">
             <div class="text-muted">Leo Lamprecht | SVP Product<a class="testimonial-logo" href="https://zeit.co/"
