--- a/site/layouts/partials/workflow-section.html
+++ b/site/layouts/partials/workflow-section.html
@@ -8,7 +8,7 @@
         <p class="lead mb-4">Checkly integrates with the open source & developer tools you use on a daily basis.</p>
       </div>
     </div>
-    <div class="row text-center">
+    <div class="row text-left">
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
         <img alt="puppeteer logo" class="mb-4" src="/landing/puppeteer-logo.png"/>
         <h5>Puppeteer</h5>
@@ -18,19 +18,19 @@
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
         <img alt="node.js logo" class="mb-4" src="/landing/javascript-logo.png"/>
         <h5>Javascript</h5>
-        <p class="px-xl-4">Extend your monitoring with Javascript for custom authentication and test logic.</p>
+        <p>Extend your monitoring with Javascript for custom authentication and test logic.</p>
         <a class="cta-link" href="/docs/api-checks/setup-teardown-scripts/">Learn more</a>
       </div>
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
         <img alt="prometheus logo" class="mb-4" src="/landing/github-logo.png"/>
         <h5>GitHub</h5>
-        <p class="px-xl-4">Run your checks as tests on each <code>git push</code> and get results in your PR comments.</p>
+        <p>Run your checks as tests on each <code>git push</code> and get results in your PR comments.</p>
         <a class="cta-link" href="/docs/cicd/github/">Learn more</a>
       </div>
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
         <img alt="prometheus logo" class="mb-4" src="/landing/prometheus-logo.png"/>
         <h5>Prometheus</h5>
-        <p class="px-xl-4">Export uptime and status data to your Prometheus cluster.</p>
+        <p>Export uptime and status data to your Prometheus cluster.</p>
         <a class="cta-link" href="/docs/integrations/prometheus/">Learn more</a>
       </div>
     </div>
