--- a/src/scss/sections/_testimonials.scss
+++ b/src/scss/sections/_testimonials.scss
@@ -1,7 +1,7 @@
 .testimonial-section {
   .testimonial-card {
     border: none;
-    max-height: 354px;
+    max-height: 415px;
     border-radius: $border-radius-lg;
     .card-block {
       padding: 2 * $spacer;
@@ -16,7 +16,7 @@
     color: $gray-dark;
     line-height: 30px !important;
     font-weight: 300;
-    padding: 1.5 * $spacer-y 0;
+    padding-top: $spacer-y;
   }
   .testimonial-portrait {
     display: flex;
@@ -26,12 +26,11 @@
       width: 50px;
       margin-right: 1rem;
     }
-    .testimonial-name-badge {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      float: left;
-    }
+  }
+
+  .testimonial-name-badge {
+    display: flex;
+    flex-direction: column;
   }
 
   &.testimonial-1 {
@@ -39,12 +38,12 @@
     padding-bottom: 2 * $section-bottom-padding;
 
     .testimonial-card {
-      max-height: 354px;
+      max-height: 415px;
     }
 
     .testimonial-text {
-      min-height: 160px;
-      max-height: 160px;
+      min-height: 200px;
+      max-height: 200px;
     }
     .testimonial-portrait {
       img {
