feat: adds e2e test section

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -109,10 +109,9 @@
           <div class="col-sm-12 col-lg-8">
             <h2>Contact</h2>
             <p>info@checklyhq.com<br>
-            Checkly has registered offices at</p>
+            Checkly Inc. has registered offices at:</p>
             <address>
               🇺🇸 United States<br>
-              Checkly Inc.<br>
               One Boston Place, Suite 2600<br>
               Boston, MA 02108<br>
             </address>
