--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -10,9 +10,10 @@
         {{ partial "testimonial-quote-full-width-1" . }}
         {{ partial "api-monitoring-section" . }}
         {{ partial "site-monitoring-section" . }}
+        {{ partial "e2e-pr-section" . }}
         {{ partial "alerting-section" . }}
-        {{ partial "workflow-section" . }}
         {{ partial "results-section" . }}
+        {{ partial "workflow-section" . }}
         {{ partial "trusted-by-section" . }}
         {{ partial "testimonial-three-col-row" . }}
         {{ partial "all-features" . }}
