--- a/src/scss/sections/_alerting.scss
+++ b/src/scss/sections/_alerting.scss
@@ -3,7 +3,7 @@
 .alerting-section {
   padding-top: 4 * $section-top-padding;
   padding-bottom: $section-bottom-padding;
-  background: $ash;
+  background: $white;
   height: 880px;
   overflow: hidden;
 
