--- a/site/layouts/partials/alerting-section.html
+++ b/site/layouts/partials/alerting-section.html
@@ -5,9 +5,9 @@
         <h3 class="display-4 mb-4">Alerting when and how you want it</h3>
         <img alt="alert notification channels" class="img-w360 mb-4" src="/landing/alerting-options@2x.png"/>
       </div>
-      <div class="col-sm-12 col-md-8"><p class="lead-text">Keep your team up to date with a
+      <div class="col-sm-12 col-md-10"><p class="lead">Keep your team up to date with a
         generous helping of SMS messages and unlimited email, Pagerduty, Slack and web hook
-        notifications. Control exactly how, when and how often you get alerted. Of course, "double-checking" is enabled
+        notifications. Control exactly how, when and how often you get alerted. "Double checking" is enabled
         by default to never get false positives.</p>
         <a class="cta-link" href="/docs/alerting">Learn more</a>
         <div class="mb-4 mb-lg-0">
