--- a/site/layouts/partials/api-monitoring-section.html
+++ b/site/layouts/partials/api-monitoring-section.html
@@ -1,6 +1,6 @@
 <section class="api-monitoring-section">
   <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-sm-5">
         <div class="text-side text-left"><h2 class="section-super-header">api monitoring</h2>
           <h3 class="section-header">No more broken APIs</h3>
@@ -11,7 +11,7 @@
             your SSL certificate is about to expire.</p><a class="cta-link" href="/product/api-monitoring/">Learn
             more</a></div>
       </div>
-      <div class="col-sm-6 offset-sm-1">
+      <div class="col-sm-7">
         <div class="image-side right"><img alt="api monitoring"
                                            class="big-landing-image big-drop-shadow assertions fade-in ml-md-5 lazy" src="/landing/api-assertions@2x.png"/><img
             alt="api monitoring"
