--- a/site/layouts/partials/results-section.html
+++ b/site/layouts/partials/results-section.html
@@ -1,9 +1,9 @@
 <section class="results-section">
   <div class="container">
-    <div class="row mb-lg-4">
-      <div class="col-sm-12 text-center"><h2 class="section-super-header">Stats & metrics</h2>
+    <div class="row mb-lg-4 justify-content-center text-center">
+      <div class="col-sm-12"><h2 class="section-super-header">Stats & metrics</h2>
         <h3 class="display-4 mb-4">Insights without limits</h3></div>
-      <div class="col-sm-12 col-md-8 offset-md-2 text-center"><p class="lead-text">Doing a root cause without complete
+      <div class="col-sm-12 col-md-10"><p class="lead">Doing a root cause without complete
         and accurate data is insane. But too much detail can also be distracting.
         That's why next to calculating aggregates to keep an overview, Checkly stores each and every
         raw result for you and your team to dive into.</p></div>
