--- a/site/layouts/partials/site-monitoring-section.html
+++ b/site/layouts/partials/site-monitoring-section.html
@@ -1,6 +1,6 @@
 <section class="site-monitoring-section">
   <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-sm-5">
         <div class="text-side text-left"><h2 class="section-super-header">synthetic monitoring</h2>
           <h3 class="section-header">No more broken web apps</h3>
@@ -13,11 +13,13 @@
             flows in a Chrome browser.</p><a class="cta-link" href="/product/transaction-monitoring/">Learn more</a>
         </div>
       </div>
-      <div class="col-sm-6 offset-sm-1">
+      <div class="col-sm-7">
         <div class="image-side right"><img alt="synthetic monitoring"
-                                           class="big-landing-image big-drop-shadow code fade-in ml-md-5 lazy" src="/landing/browser-code@2x.png"/><img
+                                           class="big-landing-image big-drop-shadow code fade-in ml-md-5 lazy"
+                                           src="/landing/browser-code@2x.png"/><img
             alt="synthetic monitoring"
-            class="big-landing-image big-drop-shadow screenshots fade-in ml-md-5 lazy hidden-md-down" src="/landing/browser-screenshots@2x.png"/></div>
+            class="big-landing-image big-drop-shadow screenshots fade-in ml-md-5 lazy hidden-md-down"
+            src="/landing/browser-screenshots@2x.png"/></div>
       </div>
     </div>
   </div>
