--- a/site/layouts/partials/e2e-pr-section.html
+++ b/site/layouts/partials/e2e-pr-section.html
@@ -26,19 +26,24 @@
               <span class="ion-pull-request mr-2"></span>
               Integrate
             </h5>
-            <p>Integrate with your GitHub repo with one simple click.</p>
+            <p>Install our GitHub App in your repo. We'll start listening to each deploy event.</p>
           </li>
           <li class="list-group-item">
             <h5>
               <span class="ion-checkmark-round mr-2"></span>
               E2E test on each push
             </h5>
-            <p>On each GitHub deploy event, get detailed E2E test results right in your PR.</p>
+            <p>On each push, get detailed E2E test results, logs and screenshots right in your PR.</p>
           </li>
         </ul>
       </div>
       <div class="col-sm-7">
-        <img alt="github merge pr screen" class="mb-4" src="/landing/github-pr@2x.png"/>
+        <img alt="github merge pr screen" class="mb-4 pr-image" src="/landing/github-pr@2x.png"/>
+      </div>
+    </div>
+    <div class="row justify-content-center text-center">
+      <div class="col-sm-12">
+        <div class="d-flex flex-row align-items-center justify-content-center pt-4">Works out-of-the-box with <img class="mx-1" src="/landing/zeit-logo.png" alt="ZEIT logo" width="20px">Zeit and <img class="mx-1" src="/landing/heroku-logo.png" alt="Heroku logo" width="20px">Heroku</div>
       </div>
     </div>
   </div>
