--- a/src/scss/_promo-banner.scss
+++ b/src/scss/_promo-banner.scss
@@ -8,7 +8,7 @@
   z-index: 999999;
   width: 100%;
   padding: .5rem;
-
+  font-size: 15px;
   .promo-banner-link {
     display: flex;
     text-decoration: none;
