style: more tweaks

--- a/site/layouts/partials/promo-banner.html
+++ b/site/layouts/partials/promo-banner.html
@@ -3,7 +3,7 @@
       <strong class="text-gray-dark">👋 We just raised a $2m+ seed round led by Accel!&nbsp;</strong>
   </a>
   <a class="promo-banner-link" href="https://blog.checklyhq.com">
-    <span class="ml-1 mr-2">And we're launching today on Product Hunt</span>
+    <span class="ml-1 mr-2">And we're launching today on <img class="mx-1" src="/landing/product-hunt-logo.png" height="16px" alt="product hunt log">Product Hunt</span>
     <div class="ion-arrow-right-c text-primary"></div>
   </a>
 </section>
