--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -74,7 +74,7 @@
                   <dt>Guillermo Rauch</dt>
                   <dd>CEO @ Zeit</dd>
                   <dt>Robin Vasan</dt>
-                  <dd>Hashicorp board member</dd>
+                  <dd>Founder Mango Capital</dd>
                 </dl>
               </div>
               <div class="col-md-4">
