--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -109,7 +109,6 @@
     }
 
     .api-reference-link {
-      padding-top: 1rem;
       margin-bottom: 1rem;
       display: inline-block;
       color: $gray-darkish;
@@ -130,8 +129,7 @@
     min-width: 20rem;
     max-width: 60rem;
     flex-grow: 1;
-    padding: 0 2rem;
-    margin-top: $top + 1rem;
+    padding: 1rem 2rem;
     margin-left: 0;
     margin-right: 0;
   }
