--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -129,7 +129,7 @@
     min-width: 20rem;
     max-width: 60rem;
     flex-grow: 1;
-    padding: 1rem 2rem;
+    padding: 1rem;
     margin-left: 0;
     margin-right: 0;
   }
