fix: limit the depth of TOC levels

--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -155,7 +155,7 @@
         border-left: 2px solid $brand-primary;
         padding-left: .5rem;
       }
-      ul > li > ul > li > li {
+      ul > li > ul {
         display: none;
       }
     }
