docs: align wording on synthetic on pricing page

--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -123,7 +123,7 @@
                       $7 / month
                     </div>
                   </div>
-                  <p>Get started with powerful API and site monitoring</p>
+                  <p>Get started with API and synthetic monitoring</p>
                   <div class="pt-list">
                     <div class="pt-list-item">
                       <div class="pt-text">API checks</div>
