feat: WIP: add placeholders for CI tools & small tweaks

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -65,7 +65,7 @@
         <div class="row text-left justify-content-center pt-5">
           <div class="col-sm-12 col-lg-8">
             <h2>Our investors</h2>
-            <p>We are happy to work with some of the best investors in the world. You might know some of their products...</p>
+            <p>We are excited to work with some of the best investors in the world. You might know some of their companies.</p>
             <div class="row text-left justify-content-center">
               <div class="col-md-4">
                 <dl>
