--- a/site/layouts/partials/e2e-pr-section.html
+++ b/site/layouts/partials/e2e-pr-section.html
@@ -8,7 +8,7 @@
         <p class="lead mb-4">Monitoring production is great. But catching bugs before they hit production is better.
           Run your API monitors and synthetic monitoring scripts against your staging environment on each <code>git push</code>.
         </p>
-        <a class="cta-link" href="/docs/cicd/github/">Learn more</a>
+        <a class="cta-link" href="/docs/cicd/">Learn more</a>
       </div>
     </div>
     <div class="row justify-content-center">
