--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -16,7 +16,7 @@
 
   &-menu {
     flex: 0 0 $menu-width;
-    font-size: .875rem;
+    font-size: 1rem;
     margin-left: auto;
 
     nav {
@@ -35,7 +35,7 @@
     }
 
     a {
-      color: $gray-darkish;
+      color: $gray-dark;
     }
 
     &-search {
@@ -49,7 +49,7 @@
     &-title {
       display: inline-block;
       font-weight: 500;
-      font-size: 0.875rem;
+      font-size: 1rem;
       margin-bottom: 0.5rem;
       &.active {
         font-weight: 400;
@@ -62,10 +62,10 @@
       margin-bottom: .5rem;
 
       &-item {
-        margin-bottom: .3rem;
-        padding-left: 1rem;
+        margin-bottom: .2rem;
+
         a {
-          color: $gray-darkish;
+          color: $gray-dark;
           text-decoration: none;
           padding: .4rem 0;
           &:hover {
@@ -92,26 +92,12 @@
         margin-top: 2rem;
         margin-bottom: .5rem;
       }
-      &.active {
-        &:before {
-          padding-right: .25rem;
-          color: $gray;
-          font-family: Ionicons;
-          content: '\f3d0'
-        }
-      }
-      &:before {
-        padding-right: .25rem;
-        color: $gray;
-        font-family: Ionicons;
-        content: '\f3d3'
-      }
     }
 
     .api-reference-link {
       margin-bottom: 1rem;
       display: inline-block;
-      color: $gray-darkish;
+      color: $gray-dark;
       &:hover {
         text-decoration: none;
         color: $brand-primary
@@ -129,7 +115,7 @@
     min-width: 20rem;
     max-width: 60rem;
     flex-grow: 1;
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 1.5rem;
     margin-left: 0;
     margin-right: 0;
   }
