docs: adds security page [ch602]

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -35,6 +35,7 @@
             <li><a href="https://headwayapp.co/checkly-updates" target="_blank">Product updates</a></li>
             <li><a href="/terms">Terms of Use</a></li>
             <li><a href="/privacy">Privacy policy</a></li>
+            <li><a href="/security">Security</a></li>
           </ul>
         </div>
       </div>
