--- a/site/layouts/partials/promo-banner.html
+++ b/site/layouts/partials/promo-banner.html
@@ -1,5 +1,5 @@
 <section class="promo-banner funding">
-  <a class="promo-banner-link" href="https://producthunt.com" target="_blank">
+  <a class="promo-banner-link" href="https://blog.checklyhq.com/checkly-raises-2-25m-to-push-active-reliability" target="_blank">
       <strong class="text-gray-dark">👋 We just raised a $2.25M seed round led by Accel!&nbsp;</strong>
   </a>
   <a class="promo-banner-link" href="https://blog.checklyhq.com">
