fix: update right link

--- a/site/layouts/partials/promo-banner.html
+++ b/site/layouts/partials/promo-banner.html
@@ -1,8 +1,8 @@
 <section class="promo-banner funding">
   <a class="promo-banner-link" href="https://blog.checklyhq.com/checkly-raises-2-25m-to-push-active-reliability" target="_blank">
-      <strong class="text-gray-dark">👋 We just raised a $2.25M seed round led by Accel!&nbsp;</strong>
+      <strong class="text-gray-dark">👋 We just raised a $2.25M seed round led by Accel!</strong>
   </a>
-  <a class="promo-banner-link" href="https://blog.checklyhq.com">
+  <a class="promo-banner-link" href="https://blog.checklyhq.com/checkly-raises-2-25m-to-push-active-reliability" target="_blank">
     <span class="ml-1 mr-2">Read all about it right here</span>
     <div class="ion-arrow-right-c text-primary"></div>
   </a>
