feat: remove funding banner & change Zeit logo to Vercel

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -72,7 +72,7 @@
                   <dt>Andrei Brasoveanu</dt>
                   <dd>Accel</dd>
                   <dt>Guillermo Rauch</dt>
-                  <dd>CEO @ Zeit</dd>
+                  <dd>CEO @ Vercel</dd>
                   <dt>Robin Vasan</dt>
                   <dd>Founder @ Mango Capital</dd>
                 </dl>
