feat: move startup application to google forms (#7)

--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -672,7 +672,7 @@
         </div>
         <div class="text-muted text-center">
           Early stage startup, younger than two years?
-          <a href="https://checklyhq.typeform.com/to/Pqok1L" target="_blank"
+          <a href="https://forms.gle/V5fMnaD1ABCfPNfdA" target="_blank"
             >Apply for a startup discount</a
           >
         </div>
