chore: rename zeit -> vercel

--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -68,7 +68,7 @@
                     ><span class="pt-tooltip pt-tooltip-right-bottom"
                       ><span class="pt-tooltip-content"
                         >Automatically trigger checks from GitHub PR or
-                        commits. Works out-of-the-box with Zeit, Heroku
+                        commits. Works out-of-the-box with Vercel, Heroku
                         etc.</span
                       ></span
                     ></span
