V1 of Alternative to
The content needs clearly some polishing but the concept should be clear.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,6 +37,7 @@
 @import 'sections/faq';
 @import 'sections/trusted-by';
 @import 'sections/e2e-pr';
+@import 'sections/alternativeto-hero';
 
 
 body {
